--- a/recipes/chicken-pot-pie.html
+++ b/recipes/chicken-pot-pie.html
@@ -4,5 +4,7 @@
     <title>Chicken Pot Pie</title>
 <body>
     <h1>Chicken Pot Pie</h1>
+    <img src="https://tinyurl.com/4bzp4t8a" alt="chicken pot pie" width="75">
+  
 </body>
 </html>
