--- a/recipes/chicken-pot-pie.html
+++ b/recipes/chicken-pot-pie.html
@@ -6,7 +6,21 @@
     <h1>Chicken Pot Pie</h1>
     <img src="https://tinyurl.com/4bzp4t8a" alt="chicken pot pie" width="75">
     <h2>Description</h2>
+
     <p>Every home cook needs a good chicken pot pie recipe in their repertoire. On the hunt for a new family favorite? You're in luck! This homemade chicken pot pie definitely deserves a permanent spot in your recipe box. </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+      <li>Chicken</li>
+      <li>Butter</li>
+      <li>Flour</li>
+      <li>Vegetables</li>
+      <li>Seasonings</li>
+      <li>Broth and Milk</li>
+      <li>Pie Crusts</li>
+    </ul>
+
+    
   
 </body>
 </html>
