Add 'Description' and paragraph

--- a/recipes/chicken-broccoli-alfredo.html
+++ b/recipes/chicken-broccoli-alfredo.html
@@ -8,6 +8,9 @@
     <h1>Chicken Broccoli Alfredo</h1>
     <img src="https://tinyurl.com/knnbmpnn" alt="chicken broccoli alfredo" width="75">
 
+    <h2>Description</h2>
+      <p>Linguini is mixed with pieces of tender chicken and broccoli flowerets and coated with a rich, satiny Alfredo sauce featuring Campbell's® Condensed Cream of Mushroom Soup to make a quick and fabulous dish.</p>
+
   </body>
 
 </html>
