Add 'Steps' and ordered list

--- a/recipes/chicken-broccoli-alfredo.html
+++ b/recipes/chicken-broccoli-alfredo.html
@@ -22,6 +22,15 @@
         <li>Black Pepper</li>
     </ul>
 
+    <h3>Steps</h3>
+    <ol>
+        <li>Cook linguine according to package directions. Add broccoli for last 4 minutes of cooking time. Drain.</li>
+        <li>Heat butter in skillet. Cook chicken until browned, stirring often.</li>
+        <li>Add soup, milk, cheese, black pepper and linguine mixture and heat through. Serve with additional Parmesan cheese.</li>
+
+    </ol>
+
+
   </body>
 
 </html>
