--- a/recipes/chicken-fried-chicken.html
+++ b/recipes/chicken-fried-chicken.html
@@ -6,8 +6,12 @@
     </head>
     <body>
         <h1>Chicken Fried Chicken</h1>
-        <img src="https://tinyurl.com/2bva34kh" alt="chicken fried steak" width="75">
-        <p>A fun chicken recipe the kids can help prepare. They love crushing the crackers. It does not matter if the measurements aren't perfect, just wing it!</p>
+          <img src="https://tinyurl.com/2bva34kh" alt="chicken fried steak" width="75">
+
+        <h2>Description</h2>
+          <p>A fun chicken recipe the kids can help prepare. They love crushing the crackers. It does not matter if the measurements aren't perfect, just wing it!</p>
+
+        
     </body>
 </html>
 
