Add Ingredients heading and unordered list

--- a/recipes/chicken-fried-chicken.html
+++ b/recipes/chicken-fried-chicken.html
@@ -11,6 +11,18 @@
         <h2>Description</h2>
           <p>A fun chicken recipe the kids can help prepare. They love crushing the crackers. It does not matter if the measurements aren't perfect, just wing it!</p>
 
+          <h3>Ingredients</h3>
+          <ul>
+            <li>Flour</li>
+            <li>Potato Flakes</li>
+            <li>Saltine Crackers</li>
+            <li>Black Pepper</li>
+            <li>Eggs</li>
+            <li>Chicken</li>
+            <li>Vegetable Oil</li>
+            
+        </ul>
+
         
     </body>
 </html>
