Add Links for Two More Recipes
Created two separate links for chicken broccoli alfredo
and chicken fried chicken.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie</a>
+    <a href="./recipes/chicken-broccoli-alfredo.html">Chicken Broccoli Alfredo</a>
+    <a href="./recipes/chicken-fried-chicken.html">Chicken Fried Chicken</a>
 </body>
 </html>
