--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie</a>
-    <a href="./recipes/chicken-broccoli-alfredo.html">Chicken Broccoli Alfredo</a>
-    <a href="./recipes/chicken-fried-chicken.html">Chicken Fried Chicken</a>
+      <ul>
+        <li><a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie</a></li>
+        <li><a href="./recipes/chicken-broccoli-alfredo.html">Chicken Broccoli Alfredo</a></li>
+        <li><a href="./recipes/chicken-fried-chicken.html">Chicken Fried Chicken</a></li>
+      </ul>
 </body>
 </html>
