--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li><a href="./recipes/chicken-broccoli-alfredo.html">Chicken Broccoli Alfredo</a></li>
         <li><a href="./recipes/chicken-fried-chicken.html">Chicken Fried Chicken</a></li>
       </ul>
-    <p><strong>**</strong>Images &amp recipes borrowed from <a href="https://www.allrecipes.com/" target="_blank">allrecipes.com</a></p>
+    <p><strong>**</strong>Images &amp; recipes borrowed from <a href="https://www.allrecipes.com/" target="_blank">allrecipes.com</a></p>
     
 </body>
 </html>
