--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <meta charset="UTF-8">
+      <link rel="stylesheet" href="styles.css">
+
+     <meta charset="UTF-8">
     <title>Odin Recipes</title>
 </head>
 <body>
