--- a/recipes/chicken-pot-pie.html
+++ b/recipes/chicken-pot-pie.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
     <title>Chicken Pot Pie</title>
 <body>
