Add Class ".para" to <p>

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-      <link rel="stylesheet" href="styles.css">
-
+     <link rel="stylesheet" href="styles.css">
      <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
@@ -13,7 +12,7 @@
         <li><a href="./recipes/chicken-broccoli-alfredo.html">Chicken Broccoli Alfredo</a></li>
         <li><a href="./recipes/chicken-fried-chicken.html">Chicken Fried Chicken</a></li>
       </ul>
-    <p><strong>**</strong>Images &amp; recipes borrowed from <a href="https://www.allrecipes.com/" target="_blank">allrecipes.com</a></p>
+    <p class="para"><strong>**</strong>Images &amp; recipes borrowed from <a href="https://www.allrecipes.com/" target="_blank">allrecipes.com</a></p>
     
 </body>
 </html>
