Center H1 and UL
Removed bullet points because they did not align when centered.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
      <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-      <ul>
+    <h1 class="heading">Odin Recipes</h1>
+      <ul class="ulc">
         <li><a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie</a></li>
         <li><a href="./recipes/chicken-broccoli-alfredo.html">Chicken Broccoli Alfredo</a></li>
         <li><a href="./recipes/chicken-fried-chicken.html">Chicken Fried Chicken</a></li>
       </ul>
-    <p class="para"><strong>**</strong>Images &amp; recipes borrowed from <a href="https://www.allrecipes.com/" target="_blank">allrecipes.com</a></p>
+    <p style="font-weight: 800;font-size: 12px; text-align: center" class="para">Images &amp; recipes borrowed from <a href="https://www.allrecipes.com/" target="_blank">allrecipes.com</a></p>
     
 </body>
 </html>
