Add h2p class to each recipe

--- a/recipes/chicken-pot-pie.html
+++ b/recipes/chicken-pot-pie.html
@@ -8,7 +8,7 @@
     <img src="https://tinyurl.com/4bzp4t8a" alt="chicken pot pie" width="500">
     <h2>Description</h2>
 
-    <p>Every home cook needs a good chicken pot pie recipe in their repertoire. On the hunt for a new family favorite? You're in luck! This homemade chicken pot pie definitely deserves a permanent spot in your recipe box. </p>
+    <p class="h2p">Every home cook needs a good chicken pot pie recipe in their repertoire. On the hunt for a new family favorite? You're in luck! This homemade chicken pot pie definitely deserves a permanent spot in your recipe box. </p>
 
     <h3>Ingredients</h3>
       <ul>
