--- a/recipes/chicken-fried-chicken.html
+++ b/recipes/chicken-fried-chicken.html
@@ -10,7 +10,7 @@
           <img src="https://tinyurl.com/2bva34kh" alt="chicken fried steak" width="500">
 
         <h2>Description</h2>
-          <p>A fun chicken recipe the kids can help prepare. They love crushing the crackers. It does not matter if the measurements aren't perfect, just wing it!</p>
+          <p class="h2p">A fun chicken recipe the kids can help prepare. They love crushing the crackers. It does not matter if the measurements aren't perfect, just wing it!</p>
 
         <h3>Ingredients</h3>
           <ul>
