--- a/recipes/chicken-broccoli-alfredo.html
+++ b/recipes/chicken-broccoli-alfredo.html
@@ -10,7 +10,7 @@
     <img src="https://tinyurl.com/knnbmpnn" alt="chicken broccoli alfredo" width="500">
 
     <h2>Description</h2>
-      <p class="h2p">Linguini is mixed with pieces of tender chicken and broccoli flowerets and coated with a rich, satiny Alfredo sauce featuring Campbell's® Condensed Cream of Mushroom Soup to make a quick and fabulous dish.</p>
+      <p class="h2p pcolor test">Linguini is mixed with pieces of tender chicken and broccoli flowerets and coated with a rich, satiny Alfredo sauce featuring Campbell's® Condensed Cream of Mushroom Soup to make a quick and fabulous dish.</p>
 
       <h3>Ingredients</h3>
       <ul>
